tests/out/error/struct/required_field.out
tests/out/error/struct/required_field.in.bt:14:6 error: field "Spam.n" requires initialization
tests/out/error/struct/required_field.in.bt:18:7 error: field "Spam.eggs" requires initialization
tests/out/error/struct/required_field.in.bt:22:6 error: field "Foo.f" requires initialization
